[package]
name = "dfut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased-serde = "0.4.5"
serde = {version = "1.0.14", features = ["derive", "rc"] }
serde_cbor = "0.11.2"
tokio = { version = "1.37.0", features = ["rt", "net", "sync", "io-util", "macros"] }
uuid = {version = "1.8.0", features = ["v4", "serde"] }
